# avr-interrupt-stepper

./: .gitignore  CMakeLists.txt  library.json  output.txt  platformio.ini  readme.md
.github/workflows/: desktop-tests.yml
examples/avr/: Configuration.h  main.cpp
examples/native/: main.cpp
examples/oat/: Axis.h  Configuration.h  Mount.cpp  Mount.h  main.cpp
include/: AccelerationRamp.h  Angle.h  Driver.h  InterruptAccelStepper.h  IntervalInterrupt.h  IntervalInterrupt_AVR.h  IntervalInterrupt_Delegate.h  IntervalInterrupt_STM32.h  Macros.h  Pin.h  Pin_AVR.h  Stepper.h
lib/Driver/: Driver.h
lib/FastPin/: FastPin.h  FastPin_AVR.h  FastPin_Arduino.h  FastPin_Test.h
lib/InterruptStepper/: AccelerationRamp.h  InterruptStepper.h  Stepper.h
lib/IntervalInterrupt/: IntervalInterrupt.h  IntervalInterrupt_AVR.h
lib/Pin/: Pin.h  Pin_AVR.h  Pin_Arduino.h
lib/Stepper/: AccelerationRamp.h  NewtonRaphson.h  Stepper.h
lib/TimerInterrupt/: TimerInterrupt.cpp  TimerInterrupt.h  TimerInterrupt_AVR.h  TimerInterrupt_Delegate.h
lib/utils/: Angle.h  utils.h
src/: FastPin.h  InterruptStepper.h  IntervalInterrupt_AVR.cpp  PreciseInterrupt.h  main.cpp
test/: CMakeLists.txt
test/test_desktop/: AccelerationRampTest.cpp  AngleTest.cpp  Constants.h  DriverTest.cpp  SimpleStepperTest.cpp  StepperPlannerCharacterizationTest.cpp  StepperTest.cpp  StepperTestSupport.h  StepperTest_old.cpp  main.cpp  test_AccelerationRamp.cpp  test_FastPin.cpp  test_InterruptStepper.cpp  test_Stepper.cpp  test_TimerInterrupt.cpp  test_desktop.cpp
test/test_desktop/gmocks/: MockedAccelerationRamp.h  MockedDriver.h  MockedIntervalInterrupt.h  MockedPin.h
test/test_desktop/mocks/: DriverMock.h  PinMock.h  TestAccelerationRamp.h  TimerInterruptMock.h
test/test_desktop/oat/: Configuration.h
test/test_embedded/: DriverTest.cpp  StepperPerformanceTest.cpp  main.cpp
